# genesis_workspace_backend

./: .gitignore  README.md  project_settings.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yaml
etc/systemd/: workspace-builder-agent.service  workspace-user-api.service
etc/workspace/: logging.yaml  workspace.conf
genesis/: genesis.yaml
genesis/images/: bootstrap.sh  install.sh
migrations/: 0000-init-example-table-f72eb7.py  0000-init-folders-and-items-f72eb7.py  0001-deduplicate-all-folders-0b5e3d.py  0002-init-services-catalog-7c1a2b.py
workspace/: version.py
workspace/cmd/: builder.py  user_api.py
workspace/common/: config.py  constants.py  log.py
workspace/common/api/middlewares/: errors.py  user_context.py
workspace/common/clients/: zulip.py
workspace/services/builders/: agents.py
workspace/tests/unit/: test_basic.py  test_folder_controller.py
workspace/user_api/: exceptions.py
workspace/user_api/api/: app.py  controllers.py  routes.py  schemas.py  versions.py
workspace/user_api/dm/: models.py
