[metadata]
name = Genesis Workspace
summary = The Backend server for Genesis Workspace
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = eugene@frolov.net.ru
home_page = https://github.com/infraguys/workspace/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    workspace


[entry_points]
console_scripts =
    workspace-user-api = workspace.cmd.user_api:main
    workspace-builder-agent = workspace.cmd.builder:main